@@ -11,4 +11,5 @@ Apache Solr Multilingual 6.x-1.0-alpha1, 2010-xx-xx
 [       ] mkalkbrenner: prepared multiple spell fields
 [       ] mkalkbrenner: added compound splitter to fieldType text
 [       ] mhuder: added module apachesolr_multilingual_textfile to administer stopwords and so on
-
+[       ] mhuder: automated generation of apachesolr textfiles
+[       ] mhuder: added isolatin1accent_filter
